// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerContent renders correctly in full screen 1`] = `
<div
  className="css-1rs50ne"
>
  <div
    className="css-erqwtd"
  >
    <div
      className="css-sglo5p"
    >
      <FullScreenForm
        historyOptions={Array []}
        isFullscreen={true}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={true}
      />
    </div>
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="0"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="css-8crqn6"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
    >
      <NarrowScreenForm
        historyOptions={Array []}
        isFullscreen={true}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={false}
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Relative time ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
      <div
        className="css-1nhbw8q"
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Other quick ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
    </CustomScrollbar>
  </div>
  <TimePickerFooter
    onChangeTimeZone={[Function]}
    timeZone="utc"
  />
</div>
`;

exports[`TimePickerContent renders correctly in narrow screen 1`] = `
<div
  className="css-1rs50ne"
>
  <div
    className="css-243bs7"
  >
    <div
      className="css-sglo5p"
    >
      <FullScreenForm
        historyOptions={Array []}
        isFullscreen={false}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={false}
      />
    </div>
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="0"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="css-8crqn6"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
    >
      <NarrowScreenForm
        historyOptions={Array []}
        isFullscreen={false}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={true}
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Relative time ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
      <div
        className="css-1nhbw8q"
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Other quick ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
    </CustomScrollbar>
  </div>
</div>
`;

exports[`TimePickerContent renders form when ranges are hidden 1`] = `
<div
  className="css-1rs50ne"
>
  <div
    className="css-erqwtd"
  >
    <div
      className="css-1wvl3n4"
    >
      <FullScreenForm
        hideQuickRanges={true}
        historyOptions={Array []}
        isFullscreen={false}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={false}
      />
    </div>
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="0"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="css-8crqn6"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
    >
      <NarrowScreenForm
        hideQuickRanges={true}
        historyOptions={Array []}
        isFullscreen={false}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={true}
      />
    </CustomScrollbar>
  </div>
</div>
`;

exports[`TimePickerContent renders recent absolute ranges correctly 1`] = `
<div
  className="css-1rs50ne"
>
  <div
    className="css-erqwtd"
  >
    <div
      className="css-sglo5p"
    >
      <FullScreenForm
        history={
          Array [
            Object {
              "from": "2019-12-17T07:48:27.433Z",
              "raw": Object {
                "from": "2019-12-17T07:48:27.433Z",
                "to": "2019-12-18T07:48:27.433Z",
              },
              "to": "2019-12-18T07:48:27.433Z",
            },
            Object {
              "from": "2019-10-17T07:48:27.433Z",
              "raw": Object {
                "from": "2019-10-17T07:48:27.433Z",
                "to": "2019-10-18T07:48:27.433Z",
              },
              "to": "2019-10-18T07:48:27.433Z",
            },
          ]
        }
        historyOptions={
          Array [
            Object {
              "display": "2019-12-17 07:48:27 to 2019-12-18 07:48:27",
              "from": "2019-12-17 07:48:27",
              "section": 3,
              "to": "2019-12-18 07:48:27",
            },
            Object {
              "display": "2019-10-17 07:48:27 to 2019-10-18 07:48:27",
              "from": "2019-10-17 07:48:27",
              "section": 3,
              "to": "2019-10-18 07:48:27",
            },
          ]
        }
        isFullscreen={true}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={true}
      />
    </div>
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="0"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="css-8crqn6"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
    >
      <NarrowScreenForm
        history={
          Array [
            Object {
              "from": "2019-12-17T07:48:27.433Z",
              "raw": Object {
                "from": "2019-12-17T07:48:27.433Z",
                "to": "2019-12-18T07:48:27.433Z",
              },
              "to": "2019-12-18T07:48:27.433Z",
            },
            Object {
              "from": "2019-10-17T07:48:27.433Z",
              "raw": Object {
                "from": "2019-10-17T07:48:27.433Z",
                "to": "2019-10-18T07:48:27.433Z",
              },
              "to": "2019-10-18T07:48:27.433Z",
            },
          ]
        }
        historyOptions={
          Array [
            Object {
              "display": "2019-12-17 07:48:27 to 2019-12-18 07:48:27",
              "from": "2019-12-17 07:48:27",
              "section": 3,
              "to": "2019-12-18 07:48:27",
            },
            Object {
              "display": "2019-10-17 07:48:27 to 2019-10-18 07:48:27",
              "from": "2019-10-17 07:48:27",
              "section": 3,
              "to": "2019-10-18 07:48:27",
            },
          ]
        }
        isFullscreen={true}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={false}
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Relative time ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
      <div
        className="css-1nhbw8q"
      />
      <TimeRangeList
        onSelect={[Function]}
        options={Array []}
        timeZone="utc"
        title="Other quick ranges"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
      />
    </CustomScrollbar>
  </div>
  <TimePickerFooter
    onChangeTimeZone={[Function]}
    timeZone="utc"
  />
</div>
`;

exports[`TimePickerContent renders without ranges 1`] = `
<div
  className="css-1rs50ne"
>
  <div
    className="css-erqwtd"
  >
    <div
      className="css-1wvl3n4"
    >
      <FullScreenForm
        hideQuickRanges={true}
        historyOptions={Array []}
        isFullscreen={true}
        onChange={[Function]}
        onChangeTimeZone={[Function]}
        timeZone="utc"
        value={
          Object {
            "from": "2019-12-17T07:48:27.433Z",
            "raw": Object {
              "from": "2019-12-17T07:48:27.433Z",
              "to": "2019-12-18T07:48:27.433Z",
            },
            "to": "2019-12-18T07:48:27.433Z",
          }
        }
        visible={true}
      />
    </div>
  </div>
  <TimePickerFooter
    onChangeTimeZone={[Function]}
    timeZone="utc"
  />
</div>
`;
